# NickPhalanx

./: CMakeLists.txt  README.md
include/: AliveCell.h  Cell.h  Color.h  Control.h  Phalanx.h  Position.h  Power.h  Step.h  TimeDate.h  Type.h  View.h
src/: main.cpp
src/module/: AliveCell.cpp  Cell.cpp  Control.cpp  Phalanx.cpp  Position.cpp  Power.cpp  Step.cpp  TimeDate.cpp  Type.cpp  View.cpp
